--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "intenseye-workshop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://intenseye.github.io/intenseye-boun-workshop",
   "dependencies": {
     "@tensorflow/tfjs": "^0.15.3",
     "face-api.js": "^0.18.0",
@@ -12,6 +13,8 @@
     "react-scripts": "2.1.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
